--- a/src/app/features/shop/shop/shop.component.html
+++ b/src/app/features/shop/shop/shop.component.html
@@ -15,7 +15,7 @@
             </div>
             <!-- Button to open the offcanvas sidebar -->
             <button class="btn btn-dark btn-option" type="button" data-bs-toggle="offcanvas" data-bs-target="#demo">
-                Tùy chọn
+                Bộ lọc
             </button>
         </div>
         <div class="col-lg-9">
