--- a/src/app/features/shop/special-item-shop/special-item-shop.component.html
+++ b/src/app/features/shop/special-item-shop/special-item-shop.component.html
@@ -1,3 +1,4 @@
+<p-toast />
 <div class="card card-custom">
     <div class="row no-gutters">
         <div class="col-md-3 img-container">
@@ -21,7 +22,7 @@
                     </div>
                 </div>
                 <div class="d-flex align-items-center pb-2 mb-1">
-                    <button type="button" data-mdb-button-init data-mdb-ripple-init
+                    <button (click)="handleCartBtnClicked()" type="button" data-mdb-button-init data-mdb-ripple-init
                         class="btn btn-dark btn-add-to-cart"
                         >
                         Thêm vào giỏ hàng
