--- a/src/app/features/home/home/home.component.html
+++ b/src/app/features/home/home/home.component.html
@@ -19,12 +19,12 @@
     <section class="featured-products">
       <h2>Sản phẩm nổi bật</h2>
       <div class="product-grid">
-        <div class="product-card p-2" *ngFor="let product of featuredProducts" style="border-radius: 8px;">
-          <img [src]="product.imageUrl" [alt]="product.name" style="border-radius: 12px;">
-          <h3 style="text-align: left;">{{ product.name }}</h3>
+        <div class="product-card p-2" *ngFor="let product of vipItems" style="border-radius: 8px;">
+          <img src="../../../../assets/images/data-test/{{product.image[0].value}}" alt="{{product.name}}" style="border-radius: 12px;cursor: pointer;">
+          <h3 style="text-align: left;cursor: pointer;">{{ product.name }}</h3>
           <div class="d-flex justify-content-between">
-            <p><a href="#!" class="text-dark price-item-custom" style="color: red !important; text-decoration: none;font-weight: bold;">{{ product.price| currency:'VND':'symbol' }}</a></p>
-            <p style="text-decoration: line-through;">{{ product.price*2 | currency:'VND':'symbol'}} <span class="badge bg-danger">{{- 50 }}%</span></p>
+            <p><a href="#!" class="text-dark price-item-custom" style="color: red !important; text-decoration: none;font-weight: bold;">{{ product.pricesale | currency:'VND':'symbol' }}</a></p>
+            <p style="text-decoration: line-through;">{{ product.price | currency:'VND':'symbol'}} <span class="badge bg-danger">{{ (100 - (product.pricesale * 100 / product.price)) | number: '1.0-2' }}%</span></p>
           </div>
           <div class="d-flex justify-content-between align-items-center pb-2 mb-1">
             <button type="button" data-mdb-button-init data-mdb-ripple-init class="btn btn-dark btn-add-to-cart">
@@ -39,9 +39,9 @@
     <section class="categories">
       <h2>Danh mục sản phẩm</h2>
       <div class="category-grid">
-        <div class="category-card" *ngFor="let category of categories">
-          <img [src]="category.imageUrl" [alt]="category.name">
-          <h3 style="filter: drop-shadow(0 0 0.75rem #000);">{{ category.name }}</h3>
+        <div class="category-card" *ngFor="let category of uniqueBrandItems">
+          <img src="../../../../assets/images/data-test/{{category.image[0].value}}" [alt]="category.name" style="cursor: pointer;">
+          <h3 style="filter: drop-shadow(0 0 0.75rem #000);cursor: pointer;">{{ category.brand }}</h3>
         </div>
       </div>
     </section>
