--- a/src/app/features/shop/image-slider/image-slider.component.html
+++ b/src/app/features/shop/image-slider/image-slider.component.html
@@ -5,7 +5,7 @@
                 <button class="btn_left" (click)="prevImage()">
                     <img src="../../../../assets/images/icons/icons8-back-to-64.png" alt="">
                 </button>
-                <img id="currentImage" [src]="currentImage" class="img-fluid" alt="Main Image">
+                <img id="currentImage" src="../../../../assets/images/data-test/{{currentImage.value}}" class="img-fluid" alt="Main Image">
                 <button class="btn_right"  (click)="nextImage()">
                     <img src="../../../../assets/images/icons/icons8-next-page-64.png" alt="">
                 </button>
@@ -15,7 +15,7 @@
 
     <div class="row mt-4">
         <div class="col-2" *ngFor="let img of images">
-            <img [src]="img" class="img-fluid small-img" alt="Thumbnail" (click)="currentImageIndex = images.indexOf(img)">
+            <img src="../../../../assets/images/data-test/{{img.value}}" class="img-fluid small-img" alt="Thumbnail" (click)="currentImageIndex = images.indexOf(img)">
         </div>
     </div>
 </div>
