--- a/src/app/features/shop/item-shop/item-shop.component.html
+++ b/src/app/features/shop/item-shop/item-shop.component.html
@@ -4,9 +4,9 @@
     <div *ngIf="!item.isPlaceholder" class="card custom-css-item" style="border-radius: 15px;">
       <div (click)="navigateToProductDetail(item.id)" class="bg-image hover-overlay ripple ripple-surface ripple-surface-light" data-mdb-ripple-color="light">
         <div style="text-align: center;">
-          <img src="../../../../assets/images/vn-11134207-7r98o-lxtcujiemg9nbe.webp"
+          <img src="../../../../assets/images/data-test/{{item.image[0].value}}"
                style="margin: 10px 0 0; width: 160px;"
-               class="img-fluid" alt="Laptop" />
+               class="img-fluid" alt="{{item.name}}" />
         </div>
       </div>
       <div class="card-body pb-0">
@@ -18,8 +18,11 @@
       </div>
       <div class="card-body pb-0">
         <div class="d-flex justify-content-between" style="font-size: 14px;">
-          <p><a class="text-dark price-item-custom">{{ item.price - (item.price * item.pricesale / 100) | currency:'VND':'symbol' }}</a></p>
-          <p style="text-decoration: line-through;">{{ item.price | currency:'VND':'symbol'}} <span class="badge bg-danger">{{- item.pricesale }}%</span></p>
+          <p><a class="text-dark price-item-custom">{{ item.pricesale | currency:'VND':'symbol' }}</a></p>
+          <p style="text-decoration: line-through;">
+            {{ item.price | currency:'VND':'symbol'}} 
+            <span class="badge bg-danger">{{ (100 - (item.pricesale * 100 / item.price)) | number: '1.0-2' }}%</span>
+          </p>
         </div>
       </div>
       <div class="card-body">
